--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,4 +2,13 @@
 Define content
 "create article"
 Back to list %>
-<h1>New Article</h1>
+<div class="container">
+<div class="py-5">
+  <h2>New Article</h2>
+  <%= simple_form_for(@article) do |f| %>
+    <%= f.input :title %>
+    <%= f.input :content %>
+    <%= f.submit class: 'btn btn-primary'%>
+  <% end %>
+</div>
+</div>
