--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,30 @@
 @import "bootstrap/scss/bootstrap";
+
+// $theme-colors: (
+//   "primary": #0074d9,
+//   "danger": #ff4136
+// );
+article {
+  background: rgba(0,0,0,0.1);
+  padding: 10px 15px;
+  margin: 10px 0px;
+  border-radius: 15px;
+  border: 1px solid rgba(0,0,0,0.5);
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.1);
+}
+a {
+  color: #393e46;
+}
+
+a p {
+  color: rgba(0,0,0,0.8);
+}
+
+a:hover {
+  color: #00adb5;
+  text-decoration: none;
+}
+a:hover p {
+  color: #00adb5;
+  text-decoration: none;
+}
